Небольшое обновление документаций, еще не закончено.
